--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,13 +2,14 @@
 <html>
   <head>
     <title><%= full_title(yield(:title)) %></title>
-    <%= csrf_meta_tags %>
-
-    <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
-    <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
+    <%= render 'layouts/rails_default' %>
+    <%= render 'layouts/shim' %><!-- agrega el parcial de IE  -->
   </head>
-
   <body>
-    <%= yield %>
+    <%= render 'layouts/header' %><!-- agrega el parcial de header -->
+    <div class="container">
+      <%= yield %>
+      <%= render 'layouts/footer' %><!-- agrega el parcial de footer -->
+    </div>
   </body>
 </html>
