--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,8 +8,13 @@
   <body>
     <%= render 'layouts/header' %><!-- agrega el parcial de header -->
     <div class="container">
+      <% flash.each do |message_type, message| %>
+        <%= content_tag(:div, message, class: "alert alert-#{message_type}") %>
+      <% end %>
+
       <%= yield %>
       <%= render 'layouts/footer' %><!-- agrega el parcial de footer -->
+      <%= debug(params) if Rails.env.development? %>
     </div>
   </body>
 </html>
