Implement advanced login

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -155,6 +155,20 @@ aside {
 
 
 /*forms*/
+
+.checkbox {
+  margin-top: -10px;
+  margin-bottom: 10px;
+  span {
+    margin-left: 20px;
+    font-weight: normal;
+  }
+}
+
+#session_remember_me {
+  width: auto;
+  margin-left: 0;
+}
 input, textarea, select,.uneditable-input{
   border:1px solid #bbb;
   width: 100%;
