--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -1,5 +1,7 @@
 @import "bootstrap-sprockets";
 @import "bootstrap";
+@import "bootstrap-material-design";
+
 
 /* mixins, variables, etc. */
 
@@ -12,6 +14,16 @@ $gray-medium-light: #eaeaea;
   box-sizing:         border-box;
 }
 
+
+
+.img-circle {
+  background-repeat: no-repeat;
+    // background-position: 50%;
+
+    border-radius: 50%;
+     width: 57px;
+     height: 57px;
+}
 /* miscellaneous */
 
 .debug_dump {
@@ -73,7 +85,14 @@ p {
 
 
 /* header */
-
+.navbar-brand {
+  padding: 0px;
+}
+.navbar-brand>img {
+  height: 115%;
+  padding: 10px;
+  width: auto;
+}
 #logo {
   float: left;
   margin-right: 10px;
@@ -92,15 +111,17 @@ p {
 /* footer */
 
 footer {
-  margin-top: 45px;
-  padding-top: 5px;
+
+  margin-top: 50px;
+  padding-top: 10%;
   border-top: 1px solid $gray-medium-light;
-  color: $gray-light;
+  color: black;
+
   a {
-    color: $gray;
+    color: black;
 
     &:hover {
-      color: $gray-darker;
+      color: black;
     }
   }
   small {
@@ -157,7 +178,7 @@ aside {
 /*forms*/
 
 .checkbox {
-  margin-top: -10px;
+  margin-top: 10px;
   margin-bottom: 10px;
   span {
     margin-left: 20px;
