--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -11,3 +11,74 @@
     </section>
   </aside>
 </div>
+<% provide(:title, @user.name) %>
+<!-- <div class="row">
+  <aside class="col-md-4">
+    <section class="user_info">
+      <h1>
+        <%= gravatar_for @user %>
+        <%= @user.name %>
+        <br>
+        <%= @user.email %>
+      </h1>
+    </section>
+  </aside>
+</div> -->
+<script src="material.js"></script>
+<table class="table table-striped table-hover ">
+  <thead>
+  <tr>
+    <th>#</th>
+    <th>Column heading</th>
+    <th>Column heading</th>
+    <th>Column heading</th>
+  </tr>
+  </thead>
+  <tbody>
+  <tr>
+    <td>1</td>
+    <td>Column content</td>
+    <td>Column content</td>
+    <td>Column content</td>
+  </tr>
+  <tr>
+    <td>2</td>
+    <td>Column content</td>
+    <td>Column content</td>
+    <td>Column content</td>
+  </tr>
+  <tr class="info">
+    <td>3</td>
+    <td>Column content</td>
+    <td>Column content</td>
+    <td>Column content</td>
+  </tr>
+  <tr class="success">
+    <td>4</td>
+    <td>Column content</td>
+    <td>Column content</td>
+    <td>Column content</td>
+  </tr>
+  <tr class="danger">
+    <td>5</td>
+    <td>Column content</td>
+    <td>Column content</td>
+    <td>Column content</td>
+  </tr>
+  <tr class="warning">
+    <td>6</td>
+    <td>Column content</td>
+    <td>Column content</td>
+    <td>Column content</td>
+  </tr>
+  <tr class="active">
+    <td>7</td>
+    <td>Column content</td>
+    <td>Column content</td>
+    <td>Column content</td>
+  </tr>
+  </tbody>
+</table>
+<div class="center">
+
+</div>
