--- a/app/views/movements/_form.html.erb
+++ b/app/views/movements/_form.html.erb
@@ -14,11 +14,16 @@
      </ul>
    </div>
  <% end %>
-<div class="field">
-  <%= f.label :concepto_de_pago %>
-  <%= f.text_field :concepto_de_pago ,class: 'form-control' %>
-</div>
-<div class="field">
+    
+    <%= f.hidden_field :account_id, :value => params[:account_id] %>
+    <%= f.hidden_field :user_id, :value => params[:user_id] %>
+
+    <div class="field">
+      <%= f.label :concepto_de_pago %>
+      <%= f.text_field :concepto_de_pago ,class: 'form-control' %>
+    </div>
+
+    <div class="field">
       <%= f.label :reference %>
       <%= f.text_field :reference ,class: 'form-control' %>
     </div>
@@ -31,6 +36,11 @@
     <div class="field">
       <%= f.label :detail %>
       <%= f.text_field :detail ,class: 'form-control' %>
+    </div>
+    
+    <div class="field">
+      <%= f.label "Categoria"%>
+      <%= f.collection_select :category_id, Category.all, :id, :name, prompt: true %>
     </div>
 
     <div class="actions">
