--- a/app/views/movements/index.html.erb
+++ b/app/views/movements/index.html.erb
@@ -27,8 +27,8 @@ h1{
 </style>
 <p id="notice"><%= notice %></p>
 
-
-<h1>Movimientos de <%= params[:account_name]%></h1>
+<% @cuenta = Account.find(params[:account_id])%>
+<h1>Movimientos de <%= @cuenta.name %></h1>
 <table class="table table-striped table-hover ">
   <thead>
     <tr class="success">
@@ -36,8 +36,10 @@ h1{
       <th>Reference</th>
       <th>Date</th>
       <th>Detail</th>
-      <th>Cuenta</th>
-<th>User ID</th>  
+      <th>Category</th>
+      <!-- <th>Cuenta</th>
+      <th>User ID</th>   -->
+      <th>Mes</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -49,10 +51,10 @@ h1{
         <td><%= movement.reference %></td>
         <td><%= movement.date %></td>
         <td><%= movement.detail %></td>
-        <td><%= movement.account_id %></td>
-        <td><%= movement.user_id %></td>
+        <td><%= Category.find(movement.category_id).name %></td>
+        <td> <%= movement.date.strftime('%B %Y') %></td>
         <td><%= link_to 'Edit', edit_user_account_movement_path(session[:user_id],params[:account_id],movement.id) ,class:"btn btn-raised btn-info" %></td>
-        <td><%= link_to 'Destroy', user_account_movement_path(session[:user_id],:account_id,movement.id),class:"btn btn-raised btn-warning", method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to 'Destroy', user_account_movement_path(session[:user_id], params[:account_id], movement.id),class:"btn btn-raised btn-warning", method: :delete, data: { confirm: 'Are you sure?' } %></td>
 
 
 </tr>
