--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -80,5 +80,5 @@
   </tbody>
 </table>
 <div class="center">
-
+  <%= link_to 'Crear Movimiento', user_accounts_path(@user), class: "btn btn-primary" %>
 </div>
