nueva ruta all-movement y resumenes

--- a/app/views/movements/edit.html.erb
+++ b/app/views/movements/edit.html.erb
@@ -15,11 +15,12 @@
   </div>
   <% end %>
 
-  <div class="field">
-    <%= f.label :concepto_de_pago %>
-    <%= f.text_field :concepto_de_pago ,class: 'form-control' %>
-  </div>
-  <div class="field">
+      <div class="field">
+        <%= f.label :concepto_de_pago %>
+        <%= f.text_field :concepto_de_pago ,class: 'form-control' %>
+      </div>
+
+      <div class="field">
         <%= f.label :reference %>
         <%= f.text_field :reference ,class: 'form-control' %>
       </div>
@@ -34,7 +35,10 @@
         <%= f.text_field :detail ,class: 'form-control' %>
       </div>
 
-
+    <div class="field">
+      <%= f.label "Categoria"%>
+      <%= f.collection_select :category_id, Category.all, :id, :name, prompt: true, default: :name %>
+    </div>
 
       <div class="actions">
         <%= f.submit class: "btn btn-primary" ,value:"Guardar"%>
