--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -25,60 +25,17 @@
   </aside>
 </div> -->
 <script src="material.js"></script>
-<table class="table table-striped table-hover ">
-  <thead>
-  <tr>
-    <th>#</th>
-    <th>Column heading</th>
-    <th>Column heading</th>
-    <th>Column heading</th>
-  </tr>
-  </thead>
-  <tbody>
-  <tr>
-    <td>1</td>
-    <td>Column content</td>
-    <td>Column content</td>
-    <td>Column content</td>
-  </tr>
-  <tr>
-    <td>2</td>
-    <td>Column content</td>
-    <td>Column content</td>
-    <td>Column content</td>
-  </tr>
-  <tr class="info">
-    <td>3</td>
-    <td>Column content</td>
-    <td>Column content</td>
-    <td>Column content</td>
-  </tr>
-  <tr class="success">
-    <td>4</td>
-    <td>Column content</td>
-    <td>Column content</td>
-    <td>Column content</td>
-  </tr>
-  <tr class="danger">
-    <td>5</td>
-    <td>Column content</td>
-    <td>Column content</td>
-    <td>Column content</td>
-  </tr>
-  <tr class="warning">
-    <td>6</td>
-    <td>Column content</td>
-    <td>Column content</td>
-    <td>Column content</td>
-  </tr>
-  <tr class="active">
-    <td>7</td>
-    <td>Column content</td>
-    <td>Column content</td>
-    <td>Column content</td>
-  </tr>
-  </tbody>
-</table>
+<h1>Graficotas</h1><h1>Graficotas</h1><h1>Graficotas</h1>
+<br>
+<br>
+<br>
+<h1>Mas graficas</h1>
+<h1>Mas graficas</h1>
+<h1>Mas graficas</h1>
 <div class="center">
+<%= link_to "Resumen Año #{Time.now.strftime('%Y')}", history_movements_index_path, class: "btn btn-primary" %>
+
+<%= link_to "Registros  anteriores", history_movements_index_path, class: "btn btn-primary" %>
+
   <%= link_to 'Crear Movimiento', user_accounts_path(@user), class: "btn btn-primary" %>
 </div>
