desperfectos sensillos en layouts , fix date, routes history_movements, form previous_record

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,13 +1,16 @@
+<link href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet">
+
 <footer class="footer">
   <small>
-    The <a href="http://www.railstutorial.org/">Ruby on Rails Tutorial</a>
-    by <a href="http://www.michaelhartl.com/">Michael Hartl</a>
+    Sistema Administrativo Contable</a>
+    by love to the <i class="material-icons md-18">code</i> Code</a>
   </small>
   <nav>
     <ul>
       <li><%= link_to "About", about_path %></li>
       <li><%= link_to "Contact", contact_path%></li>
-      <li><a href="http://news.railstutorial.org/">News</a></li>
+      <li><a href="http://google.com/">News</a></li>
     </ul>
   </nav>
 </footer>
