--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -16,9 +16,9 @@
     <div class="navbar-collapse collapse navbar-inverse-collapse">
       <ul class="nav navbar-nav">
         <!-- <li class="active"><a href="javascript:void(0)">Active</a></li> -->
-          <li class="active"><%= link_to "Home", root_path%></li>
+<!--           <li class="active"><%= link_to "Home", root_path%></li>
         <li><a href="javascript:void(0)">Link</a></li>
-        <li><%= link_to "HELP", help_path%></li>
+        <li><%= link_to "Help", help_path%></li> -->
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <!-- <li><a href="javascript:void(0)">Link</a></li> -->
