--- a/app/views/movements/_form.html.erb
+++ b/app/views/movements/_form.html.erb
@@ -28,16 +28,17 @@
       <%= f.text_field :reference ,class: 'form-control' %>
     </div>
 
-    <div class="field">
+    <div class="input-group date">
       <%= f.label :date %>
-      <%= f.text_field :date, "data-provide" => "datepicker"  %>
+      <%= f.text_field :date, class: 'form-control', "data-provide" => "datepicker", "data-date-language" => 'es', 
+      "data-date-today-highlight" => true, "data-date-today-btn" => true %>
     </div>
 
     <div class="field">
       <%= f.label :detail %>
       <%= f.text_field :detail ,class: 'form-control' %>
     </div>
-    
+
     <div class="field">
       <%= f.label "Categoria"%>
       <%= f.collection_select :category_id, Category.all, :id, :name, prompt: true %>
