--- a/app/views/movements/edit.html.erb
+++ b/app/views/movements/edit.html.erb
@@ -1,5 +1,4 @@
-<br>
-<br>
+<h1>Modificar movimiento</h1>
 <div class="col-md-15">
   <div class="well bs-component">
 <%= form_for :movement, url: user_account_movement_path(@movement.id), method: :patch do |f| %>
