--- a/app/views/movements/edit.html.erb
+++ b/app/views/movements/edit.html.erb
@@ -1,5 +1,10 @@
 <br>
 <br>
+<br>
+<br>
+<br>
+<br>
+<br>
 <div class="col-md-15">
   <div class="well bs-component">
 <%= form_for :movement, url: user_account_movement_path(@movement.id), method: :patch do |f| %>
@@ -25,8 +30,9 @@
       </div>
 
       <div class="field">
-        <%= f.label :date %>
-        <%= f.text_field :date, "data-provide" => "datepicker"  %>
+        <%= f.label :date %>Año-mes-dia
+        <%= f.text_field :date ,class: 'form-control' %>
+        <!-- <%= f.text_field :date, "data-provide"=> "datepicker"%> -->
       </div>
 
       <div class="field">
