--- a/app/views/movements/index.html.erb
+++ b/app/views/movements/index.html.erb
@@ -33,15 +33,12 @@ h1{
   <thead>
     <tr class="success">
       <th>Concepto de pago</th>
-      <th>Reference</th>
-      <th>Date</th>
-      <th>Month</th>
-      <th>Detail</th>
-
-      <th>Category</th>
-      <!-- <th>Cuenta</th>
-      <th>User ID</th>   -->
+      <th>Referencia</th>
+      <th>Fecha-Año/Mes/Dia</th>
       <th>Mes</th>
+      <th>Detalle</th>
+
+      <th>Categoria</th>
 
       <th colspan="3"></th>
     </tr>
@@ -49,25 +46,12 @@ h1{
 
   <tbody>
     <% @movements.each do |movement| %>
-      <tr>
-        <td><%= movement.concepto_de_pago %></td>
-        <td><%= movement.reference %></td>
-        <td><%= movement.date %></td>
-        <td><% t=movement.date %><%= t.strftime("%b")%>
-<%= t.strftime("%Y") %></td>
-        <td><%= movement.detail %></td>
-        <td><%= Category.find(movement.category_id).name %></td>
-        <td> <%= movement.date.strftime('%B %Y') %></td>
-        <td><%= link_to 'Edit', edit_user_account_movement_path(session[:user_id],params[:account_id],movement.id) ,class:"btn btn-raised btn-info" %></td>
-        <td><%= link_to 'Destroy', user_account_movement_path(session[:user_id], params[:account_id], movement.id),class:"btn btn-raised btn-warning", method: :delete, data: { confirm: 'Are you sure?' } %></td>
-
-
-</tr>
+       <%= render "row", movement: movement  %>
     <% end %>
   </tbody>
 </table>
 
 <br>
 <div class="boton_creado">
-<%= link_to 'New Movement', new_user_account_movement_path(session[:user_id]),class:'btn btn-primary' ,style: 'align:center;padding:15px 15px 15px 15px!important;' %>
+<%= link_to 'Nuevo Movimiento', new_user_account_movement_path(current_user),remote:true,class:'btn btn-primary' ,style: 'align:center;padding:15px 15px 15px 15px!important;' %>
 </div>
