agregado crud de categorias

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -17,6 +17,21 @@
                     <ul class="nav navbar-nav navbar-right">
                         <% if logged_in? %>
 
+
+                        <li class="dropdown">
+                            <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+                                <i class="material-icons" style="display: inline-flex; vertical-align: middle;font-size:33px;">assessment</i>
+                                Categorias
+                                <b class="caret"></b>
+                            </a>
+                            <ul class="dropdown-menu">
+                                <li><%= link_to "Ver Categorias",  user_categories_path(current_user) %></li>
+                                <li><%= link_to 'Añadir Categoria', new_user_category_path(current_user),remote: true %></li>
+
+                            </ul>
+                        </li>
+
+
                         <li class="dropdown">
                             <a href="#" class="dropdown-toggle" data-toggle="dropdown">
                                 <i class="material-icons" style="display: inline-flex; vertical-align: middle;font-size:33px;">account_circle</i>
