--- a/app/views/movements/index.html.erb
+++ b/app/views/movements/index.html.erb
@@ -34,7 +34,7 @@ h1{
     <tr class="success">
       <th>Concepto de pago</th>
       <th>Referencia</th>
-      <th>Fecha-Año/Mes/Dia</th>
+      <th>Fecha</th>
       <th>Mes</th>
       <th>Detalle</th>
 
