--- a/app/views/history_movements/report.pdf.erb
+++ b/app/views/history_movements/report.pdf.erb
@@ -1,30 +1,48 @@
 <% provide(:title, "Registro #{Time.now.year}") %>
+<style type="text/css">
+  h1{
+    font-family: Georgia,"Times New Roman",Serif;
+    font-size: 30px;
+  }
+  tr th{
+    font-family: "Times New Roman",Georgia,Serif;
+    font-size: 10px; 
+    padding: 3px 1.5px;
+  }
+  td{
+    font-family: Serif,"Times New Roman",Georgia;
+    font-size: 8.5px; 
+    padding: 5px;
+  }
+</style>
+<div class="center">
 <h1>Resumen de movimientos realizados</h1>
 <h1><%= Time.now.strftime '%Y' %></h1>
+</div>
 
-<%= link_to "Descargar como PDF", download_path, target: "_blank", class: "btn btn-primary" %>
 <table class="table table-striped table-hover ">
   <thead>
-    <tr style="background-color: #01D59C!important;">
+    <tr style="background-color: #2791E7">
       <th>Cuenta</th>
       <th>Concepto de pago</th>
       <th>Reference</th>
-      <th>Fecha de Pago</th>
+      <th >Fecha de Pago</th>
       <th>Mes</th>
       <th>Category</th>
       <th>Detalle</th>
       <!-- mandar a llamar Financial Statement -->
       <th>Retiro</th>
       <th>Deposito</th>
-      <th>Saldo</th>      
+      <th>Saldo</th>
     </tr>
   </thead>
 
   <tbody>
     <% @movements.each do |movement| %>
       <tr>
-      	<td><%= Account.find(movement.account_id).name %></td>
+        <td><%= Account.find(movement.account_id).name %></td>
         <td><%= movement.concepto_de_pago %></td>
+        <!-- style="word-wrap:break-word;" -->
         <td><%= movement.reference %></td>
         <td><%= movement.date.strftime('%d/%m/%Y') %></td>
         <!-- Esta fecha es la de cuando se registro -->
@@ -32,11 +50,12 @@
         <!-- Crear espacio para fecha en que se reporto el retiro o deposito -->
         <td><%= Category.find(movement.category_id).name %></td>
         <td><%= movement.detail %></td>
-      	<!-- mandar a llamar Financial Statement -->
         <td> $41,347.32 </td>
         <td> $48,306,279.60 </td>
         <td>  $52,788,148.62 </td>
-	  </tr>
+        <!-- mandar a llamar Financial Statement -->
+
+    </tr>
     <% end %>
   </tbody>
 </table>
