--- a/app/views/movements/_row.html.erb
+++ b/app/views/movements/_row.html.erb
@@ -5,9 +5,10 @@
     <td> <%= movement.date.strftime('%B %Y') %></td>
     <td><%= movement.detail %></td>
     <td><%= Category.find(movement.category_id).name %></td>
-
-    <td><%= link_to 'Editar', edit_user_account_movement_path(current_user,params[:account_id],movement.id),remote:true ,class:"btn btn-raised btn-info" %></td>
-    <td><%= link_to 'Destruir', user_account_movement_path(current_user, params[:account_id], movement.id),class:"btn btn-raised btn-warning", method: :delete, data: { confirm: 'Are you sure?' } %></td>
+    <td><%= movement.withdrawal %></td>
+    <td><%= movement.deposit %></td>
+    <td><%= link_to raw("<i class='material-icons md-18'>edit</i>"), edit_user_account_movement_path(current_user,params[:account_id],movement.id),remote:true ,class:"btn btn-raised btn-info edition" %></td>
+    <td><%= link_to raw("<i class='material-icons md-18'>delete_sweep</i>"), user_account_movement_path(current_user, params[:account_id], movement.id),class:"btn btn-raised btn-warning edition", method: :delete, data: { confirm: 'Are you sure?' } %></td>
 
 
 </tr>
