--- a/app/views/movements/index.html.erb
+++ b/app/views/movements/index.html.erb
@@ -1,3 +1,5 @@
+<script src="http://code.jquery.com/jquery-1.11.1.min.js"></script>
+<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 <style>
 .btn{
 padding-top: 0;
@@ -40,7 +42,10 @@ h1{
 
       <th>Categoria</th>
 
-      <th colspan="3"></th>
+      <th>deposito</th>
+      <th>retiro</th>
+      <th>total</th>
+      <th colspan="2"></th>
     </tr>
   </thead>
 
@@ -52,6 +57,14 @@ h1{
 </table>
 
 <br>
-<div class="boton_creado">
-<%= link_to 'Nuevo Movimiento', new_user_account_movement_path(current_user),remote:true,class:'btn btn-primary' ,style: 'align:center;padding:15px 15px 15px 15px!important;' %>
-</div>
+
+  <div class="container">
+  <div class="center">
+    
+  <%= link_to '<<Egreso Nuevo Movimiento', new_user_account_movement_path(current_user),remote:true,class:'btn btn-primary' ,style: 'align:center;padding:15px 15px 15px 15px!important;' %>
+
+  <%= link_to '>>Ingreso Nuevo Movimiento', new_user_account_movement_path(current_user),remote:true,class:'btn btn-primary' ,style: 'align:center;padding:15px 15px 15px 15px!important;' %>
+
+  <%= link_to '~ Neutro Nuevo Movimiento', new_user_account_movement_path(current_user),remote:true,class:'btn btn-primary' ,style: 'align:center;padding:15px 15px 15px 15px!important;' %>
+  </div>
+  </div>
