--- a/app/assets/stylesheets/accounts.scss
+++ b/app/assets/stylesheets/accounts.scss
@@ -4,42 +4,54 @@
 // Place all the styles related to the Account controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
-
-
-
 // a,a:visited { color: #fff; }
 // a:hover { color: #fff; }
 
 .social {
-
-float: left;
-margin: 1em 1em; width: 200px; height: 200px;
-display: block; text-align: center;color: #fff;
-align-items: center;
-position: relative;
-transform:rotateY(0deg);
-transition:transform .25s ease-out;
-transform-style:preserve-3d;
+    float: left;
+    margin: 1em;
+    width: 200px;
+    height: 200px;
+    display: block;
+    text-align: center;
+    color: #fff;
+    align-items: center;
+    position: relative;
+    transform: rotateY(0deg);
+    transition: transform 0.25s ease-out;
+    transform-style: preserve-3d;
 }
+
 .social > div {
- padding-top: 45%;
-color:white;
-align-items: center;
-width: 200px; height: 200px; background: #03a9f4;
-position: absolute; top: 0; left: 0; right: 0; bottom: 0;
+    padding-top: 45%;
+    color: white;
+    align-items: center;
+    width: 200px;
+    height: 200px;
+    background: #03a9f4;
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+}
 
+.social > .front {
+    font-size: 1.6em;
+    align-items: center;
+    transform: translateZ(40px);
 }
-.social >.front {
-font-size: 1.6em;
-align-items: center;
-transform:translateZ(40px);
 
+.social > .back {
+    align-items: center;
+    background: rgba(13, 62, 134,0.99);
+    font-size: 1em;
+    padding-top: 2px;
+    padding-bottom: 2px;
+    font-weight: bold;
+    transform: rotateY(-100deg) translateZ(40px);
 }
-.social >.back {
-align-items: center;
-background: rgba(13, 62, 134,0.99); font-size: 1em;padding-top: 2px;padding-bottom: 2px;font-weight: bold;
-transform:rotateY(-100deg) translateZ(40px);
-}
+
 
 // Social Media Colors
 //  Facebook #3B5998
@@ -53,9 +65,8 @@ transform:rotateY(-100deg) translateZ(40px);
 //  Vimeo #86B32D
 //  Youtube #FF3333
 //  Dribbble #ea4c89
-
-
- /*Hover */
+// <%= link_to 'Edit',edit_user_account_path(current_user,account.id) ,remote: true,class:"btn btn-success cuarto-circulo",style:"align-items:center;font-size: 9px;width:5px:height:5px;font-size: 9px;" %>
+/*Hover */
 .social:hover {
- transform: rotateY(100deg);
+    transform: rotateY(100deg);
 }
