--- a/app/views/accounts/index.html.erb
+++ b/app/views/accounts/index.html.erb
@@ -1,23 +1,31 @@
-
+<style media="screen">
+  .btn{
+    width: 10px;
+height: 35px;
+margin: 0 auto;
+  }
+</style>
+<link href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet">
+<div>
 <p id="notice"><%= notice %></p>
 <h1>Seleccione la cuenta a administrar</h1>
-
-<div class="boton_creado">
-
-</div>
-
 <% @accounts.each do |account| %>
-
-<!-- Acount.all -->
 <div class="social">
+  <div class='front'>
+    <%= render "row", account: account %>
+  </div>
 
-<div class='front'>
- <%= render "row", account: account %>
-</div>
-<div class='back'>
-<%= link_to account.name, user_account_movements_path(current_user,account.id),class:"btn btn",style:"width:200px;height:50px;margin-top:-3px;margin-left:0px;padding:15% 25%; background-color: white;"%>
-<%= link_to 'Edit',edit_user_account_path(current_user,account.id) ,remote: true,class:"btn btn-raised btn-success" %>
-<%= link_to 'Destroy',user_account_path(current_user,account.id),class:"btn btn-raised btn-warning " ,style:"background-color: #F44336!important;", method: :delete, data: { confirm: 'Are you sure?' } %>
+  <div class='back'>
+
+<%= link_to account.name, user_account_movements_path(current_user,account.id), class:"btn btn",style:"width:200px;height:90px;margin-top:-3px;margin-left:0px;margin-buttom:0;padding: 41% 30%;color: white;margin:none;box-shadow:none;font-size:1.3em;" %>
+<!-- ,style:"width:200px;height:50px;margin-top:-3px;margin-left:0px;margin-buttom:0;padding: 25%; background-color: white;" -->
+
+  <%= link_to raw("<i class='material-icons '>edit</i>"),edit_user_account_path(current_user,account.id) ,remote: true,class:"btn btn-success center ",style:"display: inline-block; width:3em; padding:0!important; position:absolute; bottom:0; left:0;"%>
+<!-- align-items: center; -->
+  <%= link_to raw("<i class='material-icons '>delete_sweep</i>"),user_account_path(current_user,account.id),class:"btn btn-raised btn-warning center" ,style:"background-color: #FF3333!important;display: inline-block; width:3em; padding: 0!important; position:absolute; bottom:0; right:0;", method: :delete, data: { confirm: 'Are you sure?' } %>
+
 </div>
 </div>
 <% end %>
+</div>
