--- a/app/views/movements/index.html.erb
+++ b/app/views/movements/index.html.erb
@@ -30,8 +30,8 @@ h1{
 <% @cuenta = Account.find(params[:account_id])%>
 <h1>Movimientos de <%= @cuenta.name %></h1>
 <table class="table table-striped table-hover ">
-  <thead>
-    <tr class="success">
+  <thead class="thead-inverse">
+    <tr style="background-color:#DEDEDE;">
       <th>Concepto de pago</th>
       <th>Referencia</th>
       <th>Fecha</th>
