--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -2,7 +2,8 @@
   body{
   /*background-image: url("http://www.centrofacturador.com.mx/images/facturacion%20electronica.jpg");*/
   background-size: cover;
-  padding-top: 4%;
+  padding-top: 3%;
+/*background-color: #333333;*/
   }
 .jumbotron{
 font-family: sans-serif;
@@ -15,18 +16,19 @@ border-radius: 5px!important;
 
 </style>
 
-<div class="center jumbotron">
-  <h1 style="">Sistema Contable CodeaCamp</h1>
-  <br>
+
+  <h1 style="padding-top:0;font-weight:bolder;">Sistema Contable CodeaCamp</h1>
+
 
 </div>
 
 <script src="Chart.js"></script>
 
-<div id="canvas-holder" class="center"style="padding-top:15px;">
+<div id="canvas-holder" class="center"style="padding-top:13px; margin:15px 15px 15px 15px;">
 
-<canvas id="chart-area4" width="350" height="100"></canvas>
+<canvas id="chart-area4" width="280" height="70"></canvas>
 </div>
+  <center><%= link_to "Log in", login_path ,class:"btn btn-info btn-raised center "%></center>
 <script>
 
 		var lineChartData = {
