--- a/app/views/movements/_formulario.html.erb
+++ b/app/views/movements/_formulario.html.erb
@@ -7,78 +7,70 @@
         position:relative;
         display: inline-block;
         margin-right:1.5em;
-    }   
+    }
 </style>
 <div id="movement-modal" class="modal fade">
-    <div class="modal-dialog">
-        <div class="modal-content">
-            <div class="modal-header">
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                    <span aria-hidden="true">&times;</span>
-                </button>
-                <h4 class="modal-title center">Nueva Movimiento</h4>
-            </div>
-
-            <%= form_for :movement ,remote:true, html: {id: "move"} do |f| %>
-
-            <div class="modal-body">
-                <div class="alert alert-danger" role="alert" style="display: none;"></div>
-                <%= f.hidden_field :account_id, :value => params[:account_id] %>
-                <%= f.hidden_field :user_id, :value => params[:user_id] %>
-
-                <div  class="horizontal"><!-- class="field" -->
-                    <%= f.label :concepto_de_pago %>
-                    <%= f.text_field :concepto_de_pago ,class: 'form-control', size: 40 %>
-                </div>
-
-                <div style="width:5em" class="horizontal"><!-- class="field" -->
-                    <%= f.label :reference %>
-                    <%= f.text_field :reference ,class: 'form-control' %>
-                </div>
-
-                <div class="input-group date horizontal" style="width: 5em">
-                    <%= f.label :date %>
-                    <%= f.text_field :date, class: 'form-control', "data-provide" => "datepicker", "data-date-language" => 'es', "data-date-today-highlight" => true, "data-date-today-btn" => true%>
-                </div>
-
-                <div class="horizontal">
-                    <%= f.label :detail %>
-                    <%= f.text_field :detail ,class: 'form-control', size: 40 %>
-                </div>
-
-                <div class="horizontal" style="width: 10em; top:20px;"><!-- class="field" -->
-                    <%= f.label "Categoria"%>
-                    <%= f.collection_select :category_id, Category.all, :id, :name, prompt: true %>
-                </div>
-
-                <div class="horizontal">
-                    <%= f.label "Retiro"%>
-                    <%= f.text_field :withdrawal, class: 'form-control dig', size: 10 %>
-                </div>
-
-                <div class="horizontal">
-                    <%= f.label "Deposito"%>
-                    <%= f.text_field :deposit, class: 'form-control dig', size: 10 %>
-                </div>
-
-                <div class="horizontal">    
-                    <label data-toggle="collapse" data-target="#iva" aria-expanded="false" aria-controls="collapseTwo">
-                        Integrar Iva<input type="checkbox">
-                    </label>
-                </div>
-
-                 <div id="iva" aria-expanded="false" class="collapse out">
-                    <div class="well">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Saepe ut molestias eius, nam neque esse eos modi corrupti harum fugit, hic recusandae praesentium, minima ipsa eligendi architecto at! Culpa, explicabo.</div>
-                </div>
-            </div>
-
-            <div class="modal-footer">
-                <%= f.submit class:"btn btn-primary btn-lg btn-block", value:"Guardar"%>
-            </div>
-            <% end %>
-        </div>
-        <!-- /.modal-content -->
-    </div>
-    <!-- /.modal-dialog -->
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+        <h4 class="modal-title center">Nuevo Movimiento</h4>
 </div>
-<!-- /.modal -->
+      <%= form_for :movement, remote: true do |f| %>
+      <div class="modal-body">
+  <div class="alert alert-danger" role="alert" style="display: none;"></div>
+  <%= f.hidden_field :account_id, :value => params[:account_id] %>
+                  <%= f.hidden_field :user_id, :value => params[:user_id] %>
+
+                  <div  class="horizontal"><!-- class="field" -->
+                      <%= f.label :concepto_de_pago %>
+                      <%= f.text_field :concepto_de_pago ,class: 'form-control', size: 40 %>
+                  </div>
+
+                  <div style="width:5em" class="horizontal"><!-- class="field" -->
+                      <%= f.label :reference %>
+                      <%= f.text_field :reference ,class: 'form-control' %>
+                  </div>
+
+                  <div class="input-group date horizontal" style="width: 5em">
+                      <%= f.label :date %>
+                      <%= f.text_field :date, class: 'form-control', "data-provide" => "datepicker", "data-date-language" => 'es', "data-date-today-highlight" => true, "data-date-today-btn" => true%>
+                  </div>
+
+                  <div class="horizontal">
+                      <%= f.label :detail %>
+                      <%= f.text_field :detail ,class: 'form-control', size: 40 %>
+                  </div>
+
+                  <div class="horizontal" style="width: 10em; top:20px;"><!-- class="field" -->
+                      <%= f.label "Categoria"%>
+                      <%= f.collection_select :category_id, Category.all, :id, :name, prompt: true %>
+                  </div>
+
+                  <div class="horizontal">
+                      <%= f.label "Retiro"%>
+                      <%= f.text_field :withdrawal, class: 'form-control dig', size: 10 %>
+                  </div>
+
+                  <div class="horizontal">
+                      <%= f.label "Deposito"%>
+                      <%= f.text_field :deposit, class: 'form-control dig', size: 10 %>
+                  </div>
+
+                  <div class="horizontal">
+                      <label data-toggle="collapse" data-target="#iva" aria-expanded="false" aria-controls="collapseTwo">
+                          Integrar Iva<input type="checkbox">
+                      </label>
+                  </div>
+
+                   <div id="iva" aria-expanded="false" class="collapse out">
+                      <div class="well">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Saepe ut molestias eius, nam neque esse eos modi corrupti harum fugit, hic recusandae praesentium, minima ipsa eligendi architecto at! Culpa, explicabo.</div>
+                  </div>
+  </div>
+        <div class="modal-footer">
+            <%= f.submit class:"btn btn-primary btn-lg btn-block" , value:"Guardar"%>
+        </div>
+        <% end %>
+       </div><!-- /.modal-content -->
+     </div><!-- /.modal-dialog -->
+   </div><!-- /.modal -->
