--- a/app/views/accounts/_formulario.html.erb
+++ b/app/views/accounts/_formulario.html.erb
@@ -10,7 +10,7 @@
   <div class="alert alert-danger" role="alert" style="display: none;"></div>
       <div class="field">
         <%= f.label :name %>
-        <%= f.text_field :name ,class: "form-control input-lg", placeholder: "Nombre de la cuenta" %>
+        <%= f.text_field :name ,class: "form-control input-lg", placeholder: "Nombre de la cuenta", :autofocus=> true %>
       </div>
 
 
