--- a/app/views/categories/_formulario_edit.html.erb
+++ b/app/views/categories/_formulario_edit.html.erb
@@ -3,16 +3,21 @@
     <div class="modal-content">
       <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-        <h4 class="modal-title center">Editar Categoria</h4>
+        <h4 class="modal-title center">Editar Categoría</h4>
 </div>
     <%= form_for :category, url: user_category_path(@category.id), method: :patch , remote:true do |f| %>
       <div class="modal-body">
   <div class="alert alert-danger" role="alert" style="display: none;"></div>
       <div class="field">
-        <%= f.label :name %>
+        <%= f.label "Nombre" %>
         <%= f.text_field :name ,class: "form-control input-lg", placeholder: "Nombre de la cuenta" %>
       </div>
-
+        
+      <div class="field">
+        <%= f.label "Clasificación" %>
+        <%= f.select(:classification, [["Neutro", "*"], ["Egreso", "-"], ["Ingreso", "+"]]) %>
+        <!-- {:class => "form-control"} -->
+      </div>
 
  </div>
 
