--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -8,7 +8,7 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <%= link_to image_tag("http://www.codealab.mx/assets/codeacamp_logo3-d00e28326ca4ba35c48d58af090ee7df.png", alt: "logo"), root_path, class: 'navbar-brand ' %>
+                    <%= link_to image_tag("http://www.codealab.mx/assets/codeacamp_logo3-d00e28326ca4ba35c48d58af090ee7df.png", alt: "logo", size:"175x75"), root_path, class: 'navbar-brand '%>
                 </div>
 
                 <!-- Collect the nav links, forms, and other content for toggling -->
