--- a/app/views/movements/_formulario.html.erb
+++ b/app/views/movements/_formulario.html.erb
@@ -22,23 +22,23 @@
   <%= f.hidden_field :account_id, :value => params[:account_id] %>
                   <%= f.hidden_field :user_id, :value => params[:user_id] %>
 
-                  <div  class="horizontal"><!-- class="field" -->
-                      <%= f.label :concepto_de_pago %>
+                  <div  class="horizontal">
+                      <%= f.label "Concepto de pago" %>
                       <%= f.text_field :concepto_de_pago ,class: 'form-control', size: 40 %>
                   </div>
 
-                  <div style="width:5em" class="horizontal"><!-- class="field" -->
-                      <%= f.label :reference %>
-                      <%= f.text_field :reference ,class: 'form-control' %>
+                  <div style="width:5em" class="horizontal">
+                      <%= f.label "Referencia" %>
+                      <%= f.text_field :reference ,class: 'form-control', placeholder:"Sin referencia"%>
                   </div>
 
                   <div class="input-group date horizontal" style="width: 5em">
-                      <%= f.label :date %>
+                      <%= f.label "Fecha" %>
                       <%= f.text_field :date, class: 'form-control', "data-provide" => "datepicker", "data-date-language" => 'es', "data-date-today-highlight" => true, "data-date-today-btn" => true%>
                   </div>
 
                   <div class="horizontal">
-                      <%= f.label :detail %>
+                      <%= f.label "Detalles" %>
                       <%= f.text_field :detail ,class: 'form-control', size: 40 %>
                   </div>
 
@@ -49,12 +49,12 @@
 
                   <div class="horizontal">
                       <%= f.label "Retiro"%>
-                      <%= f.text_field :withdrawal, class: 'form-control dig', size: 10 %>
+                      <%= f.text_field :withdrawal, class: 'form-control dig', size: 10, value: 0 %>
                   </div>
 
                   <div class="horizontal">
                       <%= f.label "Deposito"%>
-                      <%= f.text_field :deposit, class: 'form-control dig', size: 10 %>
+                      <%= f.text_field :deposit, class: 'form-control dig', size: 10, value: 0 %>
                   </div>
 
                   <div class="horizontal">
