--- a/app/assets/stylesheets/movements.scss
+++ b/app/assets/stylesheets/movements.scss
@@ -2,8 +2,8 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
-// .edition{
-// 	box-shadow: none !important;
-// 	padding: 0!important;
-// 	margin: auto 0;
-// }
+.edition{
+	box-shadow: none !important;
+	padding: 0!important;
+	margin: auto 0;
+}
